Fix layout & spacing for simple gate

--- a/styles/_theme.less
+++ b/styles/_theme.less
@@ -154,7 +154,7 @@
 
 
 .Canvas {
-	@padding: .5rem;
+	@padding: 1rem;
 	position: relative;
 
 	// Add spacing around the content, without affecting
